--- a/Projects/css/pterodactylshank.css
+++ b/Projects/css/pterodactylshank.css
@@ -9,7 +9,7 @@ body {
   clear: both;
   width: 27.1666666666%;
   height: 407px;
-  margin: 20px 0 0 36.41667%;
+  margin: 20px 0 0 36.4166666666%;
   background: url('../images/PTScreenshot.png') rgb(30, 35, 108);
   background-repeat: no-repeat;
   background-size: contain;
@@ -18,6 +18,7 @@ body {
 
 .text {
   float: left;
+  min-height: 50px;
 }
 
 ._button {
@@ -33,8 +34,7 @@ body {
 .text-1 {
   width: 27.1666666666%;
   height: 49px;
-  min-height: 104px;
-  margin: 34px 0 0 36.41667%;
+  margin: 34px 0 0 36.4166666666%;
   font-size: 2em;
   text-align: center;
   color: rgb(250, 242, 242);
@@ -43,8 +43,7 @@ body {
 .text-2 {
   clear: both;
   width: 26.4166666666%;
-  min-height: 168px;
-  margin-left: 37.1992199999%;
+  margin-left: 37.19921875%;
   font-size: 1em;
   color: rgb(255, 255, 255);
 }
